--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Mesto-Backend",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "dev": "nodemon app.js",
-    "eslint": "npx eslint"
+    "eslint": "npx eslint ."
   },
   "keywords": [],
   "author": "Maksim Basov",
@@ -20,9 +20,6 @@
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.12"
   },
   "repository": {
